--- a/src/view/index.html
+++ b/src/view/index.html
@@ -163,7 +163,7 @@
 
             computed: {
                 formTitle() {
-                    return this.editedIndex === -1 ? 'New Item' : 'Edit Item'
+                    return this.editedIndex === -1 ? 'New User' : 'Edit User'
                 },
             },
 
